# Loci

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  loci-prd.md
docs/: architecture.md  cheatsheet.md  getting-started.md  why.md
src/: config.rs  lib.rs  main.rs  server.rs
src/cli/: doctor.rs  export.rs  import.rs  inspect.rs  maintenance.rs  mod.rs  re_embed.rs  reset.rs  search.rs  stats.rs
src/db/: migrations.rs  mod.rs  schema.rs
src/embedding/: local.rs  mod.rs
src/memory/: forget.rs  maintenance.rs  mod.rs  relations.rs  search.rs  stats.rs  store.rs  types.rs
src/tools/: forget_memory.rs  memory_inspect.rs  memory_stats.rs  mod.rs  recall_memory.rs  store_memory.rs  store_relation.rs
tests/: db_init_test.rs  dedup_test.rs  forget_test.rs  maintenance_test.rs  migration_test.rs  relations_test.rs  resilience_test.rs  sqlite_vec_spike.rs  supersession_test.rs  write_read_test.rs
tests/helpers/: mod.rs
