[package]
name = "loci"
version = "0.1.1"
edition = "2021"
description = "Cognitive memory MCP server — persistent, structured, cross-session memory for AI agents"
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.18.4"
ndarray = "0.17.2"
ort = "2.0.0-rc.11"
reqwest = { version = "0.13.2", features = ["stream"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
rusqlite = { version = "0.38", features = ["bundled", "vtab"] }
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1"
thiserror = "2"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tokio = { version = "1", features = ["full"] }
toml = "1.0.3+spec-1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
